# c-of-ocaml

./: .gitignore  README.md  common.dune  coo.opam  dune-project
calc/: dune  main.c  main.ml
calc/cube/: dune  fixed.ml  fixed.mli  main.ml  makefile  test.sh
calc/fib/: dune  main.ml  makefile  test.sh
calc/hello_world/: dune  main.ml  makefile  test.sh
calc/ti84ce/: dune  graphx.ml  main.c.bak  notes.txt  os.ml  runtime.c  stubs.c  ti84ce.ml
compiler/: compile.ml  driver.ml  dune  opt.ml  opt.mli
example/: a.out  bar.ml  dune  fib.ml  fixed.ml  fixed.mli  foo.c  foo.ml  main.ml
example/stdlib/: bytes.mli  char.ml  char.mli  dune  int.ml  int.mli  io.mli  list.ml  list.mli  stdlib.ml  stdlib.mli  string.ml  string.mli
example/stubs/: dune  stubs.c
lib/: compile.ml  driver.ml  dune  opt.ml  opt.mli  stdlib.c
lib/runtime/: dune  runtime.c
runtime/: runtime.c
runtime/stdlib/: bytes.ml  int.ml  io.ml  list.ml  list.mli  stdlib.ml  stdlib.mli  string.mli  stubs.c
test/: Makefile  demo.ml  dune  test_bar.ml  test_coo.ml  util.ml
