(executable
 (name foo)
 (libraries stdlib)
 (modes byte))

(rule
 (targets foo.unformatted.c)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:c_of_ocaml} %{dep:foo.bc}))))

(rule
 (target foo.combined.c)
 (deps
  (:runtime %{project_root}/lib/runtime/runtime.c)
  foo.unformatted.c)
 (action
  (with-stdout-to
   %{target}
   (bash "cat %{runtime} %{dep:foo.unformatted.c}"))))

(rule
 (target foo.c)
 (mode promote)
 (deps foo.combined.c)
 (action
  (with-stdout-to
   %{target}
   (run clang-format %{deps}))))

(alias
 (name default)
 (deps foo.c))
