(executable
 (name main)
 (libraries stdlib)
 (modes byte))

(include ../common.dune)

(rule
 (target main.c)
 (deps
  (:runtime %{project_root}/runtime/runtime.c)
  main.generated.c)
 (action
  (with-stdout-to
   %{target}
   (bash "cat %{runtime} %{dep:main.generated.c}"))))

; Also compile it:

(rule
 (target main.c.exe)
 (deps main.c)
 (action
  (run %{cc} -ansi -Og -g -o main.c.exe %{deps})))

(alias
 (name default)
 (deps main.c.exe))
