(executable
 (name main)
 (libraries stdlib ti84ce)
 (modes byte))

(include ../../common.dune)

(rule
 (target main.c)
 (deps
  %{project_root}/runtime/runtime.c
  %{project_root}/calc/ti84ce/runtime.c
  main.c.generated)
 (action
  (with-stdout-to
   %{target}
   (bash "cat %{deps}"))))

(rule
 (targets CAMLCUBE.8xp)
 (deps makefile main.c)
 (action
  (run make debug)))

(alias
 (name default)
 (deps CAMLCUBE.8xp))
